tests/build/cases/widget/module_path_missing_dollar_sign.stderr
error: expected a macro_rules `$crate` path to this widget mod
 --> cases/widget/module_path_missing_dollar_sign.rs:4:10
  |
4 | #[widget(crate::widget)]
  |          ^^^^^
